Formatted background as well as adding an id for horizontal navbar

--- a/lol.html
+++ b/lol.html
@@ -9,12 +9,12 @@
             <img src ="media/lol_logo.png" id = "gameLogo">
         </div>
         <div id ="eSportMenu">
-            <ul id="esportMenu">
-                <li><a href = "main.html">Home</a></li>
-                <li><a href="cod.html">Call of Duty</a></li>
-                <li><a href="lol.html">League of Legends</a></li>
-                <li><a href="cs:go">Counter Strike: Global Offensive</a></li>
-                <li><a href="ow.html">Overwatch</a></li>
+            <ul id="navBar">
+                <li id = "navList"><a href = "main.html">Home</a></li>
+                <li id = "navList"><a href="cod.html">Call of Duty</a></li>
+                <li id = "navList"><a href="lol.html">League of Legends</a></li>
+                <li id = "navList"><a href="cs:go">Counter Strike: Global Offensive</a></li>
+                <li id = "navList"><a href="ow.html">Overwatch</a></li>
               </ul>
         </div>
         <div id ="relevantLink">
