Side bar added and simple formatting done

--- a/lol.html
+++ b/lol.html
@@ -19,10 +19,10 @@
         </div>
         <div id ="relevantLink">
             <ul id="relevantMenu">
-                <li><a href="https://www.lolesports.com">Main Website</a></li>
-                <li><a href="news.asp">News</a></li>
-                <li><a href="contact.asp">Contact</a></li>
-                <li><a href="about.asp">About</a></li>
+                <li id = "relevantList"><a href="https://www.lolesports.com">Main Website</a></li>
+                <li id = "relevantList"><a href="news.asp">News</a></li>
+                <li id = "relevantList"><a href="contact.asp">Contact</a></li>
+                <li id = "relevantList"><a href="about.asp">About</a></li>
               </ul>
         </div>
         <div id="content">
