IN PROGRESS: Trying to get page layout to work

--- a/cod.html
+++ b/cod.html
@@ -8,20 +8,33 @@
     <title>Call Of Duty</title>
 </head>
 <body>
-    <img src="media/codLogo.png" style="width:512px;height:128px;"/>        
-        <ul>
-            <li><a href="main.html">Home</a></li>
-            <li><a href="cod.html">Call Of Duty</a></li>
-            <li><a href="lol.html">League Of Legends</a></li>
-            <li><a href="csgo.html">CS: GO</a></li>
-            <li><a href="ow.html">Overwatch</a></li>
-            <li><a href="rl.html">Rocket League</a></li>
-        </ul>
-        <span>
-        Call of Duty is a first-person shooter video game franchise. The series began on Microsoft Windows, and later expanded to consoles and handhelds. Several spin-off games have been released. The earlier games in the series are set primarily in World War II, but later games like Call of Duty 4: Modern Warfare are set in modern times or in futuristic settings. The most recently announced game, Call of Duty: WWII, will be released on November 3, 2017 and return the series to its mid-20th century roots.
-        The Call of Duty games are published and owned by Activision. While Infinity Ward is still a developer, Treyarch and Sledgehammer Games also develop several of the titles with the release of the studios' games alternating with each other. Some games have been developed by Gray Matter Interactive, Nokia, Exakt Entertainment, Spark Unlimited, Amaze Entertainment, n-Space, Aspyr, Rebellion Developments, Ideaworks Game Studio, and nStigate Games. The games use a variety of engines, including the id Tech 3, the Treyarch NGL, and the IW engine.
-        As of February 2016, the Call of Duty series has sold over 250 million copies.[1] Sales of all Call of Duty games topped US$15 billion.[1]
-        Other products in the franchise include a line of action figures designed by Plan-B Toys, a card game created by Upper Deck Company, Mega bloks sets by Mega Brands, and a comic book mini-series published by WildStorm Productions.
-        </span>
+        <div id ="Header">
+                <img src ="media/codLogo.png" style="width:512px;height:128px;" id = "gameLogo">
+            </div>
+            <div id ="eSportMenu">
+                <ul id="navBar">
+                    <li id = "navList"><a href = "main.html">Home</a></li>
+                    <li id = "navList"><a href="cod.html">Call of Duty</a></li>
+                    <li id = "navList"><a href="lol.html">League of Legends</a></li>
+                    <li id = "navList"><a href="cs:go">Counter Strike: Global Offensive</a></li>
+                    <li id = "navList"><a href="ow.html">Overwatch</a></li>
+                  </ul>
+            </div>
+            <div id ="relevantLink">
+                <ul id="relevantMenu">
+                    <li id = "relevantList"><a href="https://www.lolesports.com">Main Website</a></li>
+                    <li id = "relevantList"><a href="news.asp">News</a></li>
+                    <li id = "relevantList"><a href="contact.asp">Contact</a></li>
+                    <li id = "relevantList"><a href="about.asp">About</a></li>
+                  </ul>
+            </div>
+            <div id="content">
+                    <span>
+                    Call of Duty is a first-person shooter video game franchise. The series began on Microsoft Windows, and later expanded to consoles and handhelds. Several spin-off games have been released. The earlier games in the series are set primarily in World War II, but later games like Call of Duty 4: Modern Warfare are set in modern times or in futuristic settings. The most recently announced game, Call of Duty: WWII, will be released on November 3, 2017 and return the series to its mid-20th century roots.
+                    The Call of Duty games are published and owned by Activision. While Infinity Ward is still a developer, Treyarch and Sledgehammer Games also develop several of the titles with the release of the studios' games alternating with each other. Some games have been developed by Gray Matter Interactive, Nokia, Exakt Entertainment, Spark Unlimited, Amaze Entertainment, n-Space, Aspyr, Rebellion Developments, Ideaworks Game Studio, and nStigate Games. The games use a variety of engines, including the id Tech 3, the Treyarch NGL, and the IW engine.
+                    As of February 2016, the Call of Duty series has sold over 250 million copies.[1] Sales of all Call of Duty games topped US$15 billion.[1]
+                    Other products in the franchise include a line of action figures designed by Plan-B Toys, a card game created by Upper Deck Company, Mega bloks sets by Mega Brands, and a comic book mini-series published by WildStorm Productions.
+                    </span>
+            </div>
 </body>
 </html>
