--- a/lol.html
+++ b/lol.html
@@ -13,20 +13,20 @@
                 <li id = "navList"><a href = "main.html">Home</a></li>
                 <li id = "navList"><a href="cod.html">Call of Duty</a></li>
                 <li id = "navList"><a href="lol.html">League of Legends</a></li>
-                <li id = "navList"><a href="cs:go">Counter Strike: Global Offensive</a></li>
+                <li id = "navList"><a href="csgo.html">Counter Strike: Global Offensive</a></li>
                 <li id = "navList"><a href="ow.html">Overwatch</a></li>
               </ul>
         </div>
-        <div id ="relevantLink">
+        
             <ul id="relevantMenu">
                 <li id = "relevantList"><a href="https://www.lolesports.com">Main Website</a></li>
                 <li id = "relevantList"><a href="news.asp">News</a></li>
                 <li id = "relevantList"><a href="contact.asp">Contact</a></li>
                 <li id = "relevantList"><a href="about.asp">About</a></li>
               </ul>
-        </div>
         <div id="content">
-
+            <img src ="media/lol_img.jpg" id ="gameImage">
+            <p id = "gameDesc">League of Legends is a fast-paced, competitive online game that blends the speed and intensity of an RTS with RPG elements. Two teams of powerful champions, each with a unique design and playstyle, battle head-to-head across multiple battlefields and game modes. With an ever-expanding roster of champions, frequent updates and a thriving tournament scene, League of Legends offers endless replayability for players of every skill level.</p>
         </div>
     </body>
 </html>
