--- a/lol.html
+++ b/lol.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>League of Legends</title>
-        <link rel="stylesheet" type = "text/css" href = "css/styles.css">
-    </head>
-    <body>
-        <div id ="Header">
-            <img src ="media/lol_logo.png" id = "gameLogo">
-        </div>
-        <div id ="eSportMenu">
-            <ul id="navBar">
-                <li id = "navList"><a href = "main.html">Home</a></li>
-                <li id = "navList"><a href="cod.html">Call of Duty</a></li>
-                <li id = "navList"><a href="lol.html">League of Legends</a></li>
-                <li id = "navList"><a href="cs:go">Counter Strike: Global Offensive</a></li>
-                <li id = "navList"><a href="ow.html">Overwatch</a></li>
-              </ul>
-        </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">    
+    <title>eSports</title>
+</head>
+<body>
+        <img src ="media/lol_logo.png" id = "gameLogo">
+<div id="wrapper">
+    <div id="header"><div id="header-content">
+        <ul id="navBar">
+            <li id = "navList"><a href = "main.html">Home</a></li>
+            <li id = "navList"><a href="cod.html">Call of Duty</a></li>
+            <li id = "navList"><a href="lol.html">League of Legends</a></li>
+            <li id = "navList"><a href="csgo.html">Counter Strike: Global Offensive</a></li>
+            <li id = "navList"><a href="ow.html">Overwatch</a></li>
+          </ul></div></div>
+    <div id="content">
         <div id ="relevantLink">
-            <ul id="relevantMenu">
-                <li id = "relevantList"><a href="https://www.lolesports.com">Main Website</a></li>
-                <li id = "relevantList"><a href="news.asp">News</a></li>
-                <li id = "relevantList"><a href="contact.asp">Contact</a></li>
-                <li id = "relevantList"><a href="about.asp">About</a></li>
-              </ul>
-        </div>
-        <div id="content">
-        </div>
-    </body>
+                <ul id="relevantMenu">
+                    <li id = "relevantList"><a href="https://eu.lolesports.com/en">Main Website</a></li>
+                    <li id = "relevantList"><a href="http://euw.leagueoflegends.com/en/news/">News</a></li>
+                    <li id = "relevantList"><a href="lol.html">About</a></li>
+                  </ul>
+            </div>
+        <div id="main">
+            <!-- Content goes in here!!! -->
+            <div class="container">
+                    <iframe
+                    src="http://player.twitch.tv/?channel=esl_lol&muted=true"
+                    height="450px"
+                    width="800px"
+                    frameborder="0"
+                    scrolling="no"
+                    allowfullscreen="true">
+                </iframe>
+            </div>
+            <h1>Stolen directly from wikipedia</h1>
+            <h5>(don't judge)</h5>
+            <p>
+                    League of Legends (abbreviated LoL) is a multiplayer online battle arena video game developed and published by Riot Games for Microsoft Windows and macOS. The game follows a freemium model and is supported by microtransactions, and was inspired by the Warcraft III: The Frozen Throne mod, Defense of the Ancients.[1]
+                    In League of Legends, players assume the role of an unseen "summoner" that controls a "champion" with unique abilities and battle against a team of other players or computer-controlled champions. The goal is usually to destroy the opposing team's "nexus", a structure which lies at the heart of a base protected by defensive structures, although other distinct game modes exist as well. Each League of Legends match is discrete, with all champions starting off fairly weak but increasing in strength by accumulating items and experience over the course of the game.[2] The champions and setting blend a variety of elements, including high fantasy, steampunk, folklore, and Lovecraftian horror.
+                    League of Legends was generally well received upon its release in 2009, and has since grown in popularity, with an active and expansive fanbase. By July 2012, League of Legends was the most played PC game in North America and Europe in terms of the number of hours played.[3] As of January 2014, over 67 million people played League of Legends per month, 27 million per day, and over 7.5 million concurrently during peak hours.[4] League has among the largest footprints of any game in streaming media communities on platforms such as YouTube and Twitch.tv; it routinely ranks first in the most-watched hours.[5][6] In September 2016 the company estimated that there are over 100 million active players each month.[7][8] The game's popularity has led it to expand into merchandise, with toys, accessories, apparel, as well as tie-ins to other media through music videos, web series, documentaries, and books.
+                    League of Legends has an active and widespread competitive scene. In North America and Europe, Riot Games organizes the League Championship Series (LCS), located in Los Angeles and Berlin respectively, which consists of 10 professional teams in each continent.[9] Similar regional competitions exist in China (LPL), South Korea (LCK), Taiwan (LMS), Southeast Asia (GPL), and various other regions.[10] These regional competitions culminate with the annual World Championship. The 2016 World Championship had 43 million unique viewers and a total prize pool of over 6 million USD.[11]
+                                    </p>
+                </div>
+    </div>
+</div>
+</body>
 </html>
