--- a/player.html
+++ b/player.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <iframe
-        src="http://player.twitch.tv/?channel=dallas&muted=true"
+        src="http://player.twitch.tv/?channel=callofduty&muted=true"
         height="720"
         width="1280"
         frameborder="0"
