--- a/csgo.html
+++ b/csgo.html
@@ -39,7 +39,7 @@
                 </iframe>
             </div>
             <h1>Stolen directly from wikipedia</h1>
-            h5>(don't judge)</h5> <!--No one needs to know--> 
+            <h5>(don't judge)</h5> <!--No one needs to know--> 
             <p>
                     Counter-Strike: Global Offensive (CS:GO) is a multiplayer first-person shooter video game developed by Hidden Path Entertainment and Valve Corporation. It is the fourth game in the Counter-Strike series and was released for Microsoft Windows, OS X, Xbox 360, and PlayStation 3 in August 2012, with the Linux version being released in September 2014. The game pits two teams against each other: the Terrorists and the Counter-Terrorists. Both sides are tasked with eliminating the other while also completing separate objectives, the Terrorists, depending on the game mode, must either plant the bomb or defend the hostages, while the Counter-Terrorists must either prevent the bomb from being planted or rescue the hostages. 
                 </p>
