icons added to the web pages

--- a/csgo.html
+++ b/csgo.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/styles.css">    
     <title>eSports</title>
+    <link rel="shortcut icon" href="media/csgo_logo.png" />
 </head>
 <body>
         <img src ="media/csgo_logo.png" id = "gameLogo">
