--- a/lol.html
+++ b/lol.html
@@ -29,6 +29,12 @@
             </div>
         <div id="main">
             <!-- Content goes in here!!! -->
+            <!-- "Yeah, I know its obsolete - bite me" -->
+            <marquee direction="down" width="100%" height="100%" behavior="alternate" style="position:absolute; z-index: 2; text-align: center;">
+                    <marquee behavior="alternate">
+                      <span class="rainbow" style="font-size: 128px;">DOTA > LEAGUE</span></br>(Fight me)
+                    </marquee>
+                  </marquee>
             <div class="container">
                     <iframe
                     src="http://player.twitch.tv/?channel=riotgames&muted=true"
